--- a/编程题.md
+++ b/编程题.md
@@ -4,3 +4,28 @@
 ## 数字加间隔符
     使用正则表达式
     https://segmentfault.com/q/1010000007554392
+
+## 实现深拷贝
+    function clone(src) {
+        if (typeof src !== 'object') {
+            return src
+        }
+        var dest = {};
+        for (var name in src) {
+            if(src［name］ === src) continue;
+            if (typeof src[name] === "object" && src[name] !== null) {
+                if (Array.isArray(src[name])) {
+                    dest[name] = [];
+                    for (var i = 0; i < src[name].length; i++) {
+                        dest[name].push(clone(src[name][i]));
+                    }
+                } else {
+                    dest[name] = clone(src[name]);
+                }
+            } else {
+                dest[name] = src[name];
+            }
+        }
+        return dest;
+     
+    };
