--- a/编程题.md
+++ b/编程题.md
@@ -1,11 +1,15 @@
 # JS 编程题
-##  数组去重
+
+## 数组去重
 
 ## 数字加间隔符
+
     使用正则表达式
     https://segmentfault.com/q/1010000007554392
 
 ## 实现深拷贝
+
+```js
     function clone(src) {
         if (typeof src !== 'object') {
             return src
@@ -27,6 +31,26 @@
             }
         }
         return dest;
-     
+
     };
+```
+
 ## 数组扁平化
+
+```js
+1.function flatten(arr) {
+    var result = [];
+    for (var i = 0, len = arr.length; i < len; i++) {
+        if (Array.isArray(arr[i])) {
+            result = result.concat(flatten(arr[i]));
+        } else {
+            result.push(arr[i]);
+        }
+    }
+    return result;
+}
+2.使用toString方法先将数组转为逗号分隔的字符串，再用split方法分割为数组
+3.reduce方法：
+```
+
+## 数组随机顺序排序
