--- a/编程题.md
+++ b/编程题.md
@@ -51,6 +51,33 @@
 }
 2.使用toString方法先将数组转为逗号分隔的字符串，再用split方法分割为数组
 3.reduce方法：
+    function flatten(arr) {
+        return arr.reduce(function(prev, next){
+            return prev.concat(Array.isArray(next) ? flatten(next) : next)
+        }, [])
+    }
 ```
 
 ## 数组随机顺序排序
+
+```js
+    1. 使用random方法：该方法的缺陷在于并不是完全随机的，每个位置出线数字的概率是随机递减的
+    function randomSort(a, b) {
+        return Math.random() > 0.5 ? -1 : 1;
+    }
+    2. 改进random方法使用新的数组作为中继存储新的数组
+    function randomSort(arr, newArr) {
+        // 如果原数组arr的length值等于1时，原数组只有一个值，其键值为0
+        // 同时将这个值push到新数组newArr中
+        if(arr.length == 1) {
+            newArr.push(arr[0]); return newArr; // 相当于递归退出
+        }
+        // 在原数组length基础上取出一个随机数
+        var random = Math.ceil(Math.random() * arr.length) - 1;
+        // 将原数组中的随机一个值push到新数组newArr中
+        newArr.push(arr[random]);
+        // 对应删除原数组arr的对应数组项
+        arr.splice(random,1);
+        return randomSort(arr, newArr);
+    }
+```
