--- a/编程题.md
+++ b/编程题.md
@@ -1,7 +1,23 @@
 # JS 编程题
 
 ## 数组去重
-
+```js
+    最简单的方法是使用双层for循环
+    1.使用ES5方法filter，从前向后查找检查元素的标志位是否重复
+    function unique(array) {
+        var res = array.filter(function(item, index, array){
+            return array.indexOf(item) === index;
+        })
+        return res;
+    }
+    2.使用object的键值关系完成数组的去重,使用typeof避免字符串和数字的在这种方法下的判定，比如1和'1'会被判定为同一个 
+    function unique(array) {
+        var obj = {};
+        return array.filter(function(item, index, array){
+            return obj.hasOwnProperty(typeof item + item) ? false : (obj[item] = true)
+        })
+    }
+```
 ## 数字加间隔符
 
     使用正则表达式
@@ -79,5 +95,16 @@
         // 对应删除原数组arr的对应数组项
         arr.splice(random,1);
         return randomSort(arr, newArr);
+    }
+    3.在数组内部进行位置调换
+    Array.prototype.shuffle = function() {
+        var input = this;
+        for (var i = input.length-1; i >=0; i--) { 
+            var randomIndex = Math.floor(Math.random()*(i+1)); 
+            var itemAtIndex = input[randomIndex]; 
+            input[randomIndex] = input[i]; 
+            input[i] = itemAtIndex; 
+        } 
+        return input; 
     }
 ```
