--- a/编程题.md
+++ b/编程题.md
@@ -10,12 +10,16 @@
         })
         return res;
     }
-    2.使用object的键值关系完成数组的去重,使用typeof避免字符串和数字的在这种方法下的判定，比如1和'1'会被判定为同一个 
+    2.使用object的键值关系完成数组的去重,使用typeof避免字符串和数字的在这种方法下的判定，比如1和'1'会被判定为同一个 ,使用JSON.stringfy方法来区分两个对象
     function unique(array) {
         var obj = {};
         return array.filter(function(item, index, array){
-            return obj.hasOwnProperty(typeof item + item) ? false : (obj[item] = true)
+            return obj.hasOwnProperty(typeof item + JSON.stringify(item)) ? false : (obj[typeof item + JSON.stringify(item)] = true)
         })
+    }
+    3.ES6方法去重
+    function unique(array) {
+        return Array.from(new Set(array));
     }
 ```
 ## 数字加间隔符
